MDEV-8839 COLUMN_GET() produces warnings with no data